--- a/Alan/src/main/webapp/resources/css/style.css
+++ b/Alan/src/main/webapp/resources/css/style.css
@@ -1,5 +1,23 @@
-.jumbotron{
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+
+.right {
+    text-align:right;
+}
+
+.box {
+    border:1px solid #ddd;
+    padding:15px;
+    border-radius: 5px;
+    background-color:white;
+}
+
+.block {
+    display:block;
+}
+
+input[type='radio'] {
+    margin-right:5px;
+}
+
+.espacamento {
+    margin-right:10px;
 }
