--- a/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
@@ -6,9 +6,14 @@
 -->
 <jsp:root xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:c="http://java.sun.com/jsp/jstl/core"
+          xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
           version="2.0">
 
     <jsp:directive.page contentType="text/html" pageEncoding="UTF-8"/>
+    
+    <jsp:output omit-xml-declaration="true"
+                doctype-root-element="HTML"
+                doctype-system="about:legacy-compact"/>
 
     <html>
         <head>
@@ -18,6 +23,7 @@
             <link rel="stylesheet" href="resources/css/style.css"/>
         </head>       
         <body>            
+            <jsp:include page="../../index.html"></jsp:include>
             <div class="container">
                 <h2>Cadastro de Usuários </h2>
                 <div class="box">
