Continuação da Implementação de Login e Permissões de Usuário

--- a/Alan/src/main/webapp/WEB-INF/jsp/cadastroFilial.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/cadastroFilial.jspx
@@ -16,6 +16,7 @@
             <link rel="stylesheet" href="resources/css/style.css"/>
         </head>
         <body>
+            <jsp:include page="../../index.html"></jsp:include>
             <div class="container">
                 <h2>Cadastro de Filiais</h2>
                 <div class="box">
