--- a/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
@@ -23,7 +23,7 @@
             <link rel="stylesheet" href="resources/css/style.css"/>
         </head>       
         <body>            
-            <jsp:include page="../../index.html"></jsp:include>
+            <jsp:include page="menu.jspx"></jsp:include>
             <div class="container">
                 <h2>Cadastro de Usuários </h2>
                 <div class="box">
@@ -88,8 +88,8 @@
                     </form>  
                 </div>
             </div>
-            <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"></script>
-            <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
+            <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
+            <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
         </body>
     </html>
 </jsp:root>
