--- a/Alan/src/main/webapp/WEB-INF/jsp/login.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/login.jspx
@@ -52,8 +52,8 @@
                 </div>
             </div>
             
-            <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"></script>
-            <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
+            <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
+            <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
         </body>
     </html>
 </jsp:root>
