--- a/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
@@ -43,7 +43,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Filial</a></li>
-                            <li><a href="#">Usuário</a></li>
+                            <li><a href="BuscaUsuarios">Usuário</a></li>
                             <li><a href="#">Produto</a></li>
                         </ul>
                     </li>
