--- a/Alan/src/main/webapp/WEB-INF/jsp/buscaUsuarios.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/buscaUsuarios.jspx
@@ -4,7 +4,9 @@
     Created on : 12/05/2016, 00:20:57
     Author     : Arthur
 -->
-<jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0">
+<jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" 
+          xmlns:c="http://java.sun.com/jsp/jstl/core"
+          version="2.0">
 
     <jsp:directive.page contentType="text/html" pageEncoding="UTF-8"/>
 
@@ -20,8 +22,29 @@
         <body>            
             <jsp:include page="menu.jspx"></jsp:include>
             <div class="container">
-                <h2>Consulta de Usuários </h2>
-                <table id="usuarios" class="table table-striped table-bordered table-hover"></table>
+                <h2>Consulta de Usuários </h2>                
+                <table id="usuarios" class="table table-striped table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Nome</th>
+                            <th>Login</th>
+                            <th>Perfil</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <c:forEach var="usuario" items="${Usuarios}">
+                            <tr>
+                                <td>${usuario.codigoUnitario}</td>
+                                <td>${usuario.nome}</td>
+                                <td>${usuario.login}</td>
+                                <td>${usuario.login}</td>
+                                <td>${usuario.status}</td>
+                            </tr>           
+                        </c:forEach>
+                    </tbody>                    
+                </table>
 <!--                <div class="box">
                     <form>
                         <div class="row">
@@ -89,12 +112,22 @@
             <script type="text/javascript" src="resources/js/jquery.dataTables.min.js"><![CDATA[/*Teste*/]]></script>
             <script type="text/javascript">
                 $(document).ready(function(){
-                   $("#usuarios").dataTable({
-                       "ajax":{
-                           "url": window.location.href + "/getUsuarios",
-                           "type": "POST"
-                       }
-                   }); 
+//                   $("#usuarios").dataTable({
+//                       "processing": true,
+//                       "serverside": true,                       
+//                       "ajax":{
+//                           "url": window.location.href + "/getUsuarios",
+//                           "type": "GET"
+//                       },
+//                       "columns": [
+//                           { "data": "codigoUnitario" },
+//                           { "data": "nome" },
+//                           { "data": "login" },
+//                           { "data": "perfil" },
+//                           { "data": "status" }
+//                       ]
+//                   }); 
+                    $("#usuarios").DataTable();
                 });
             </script>
         </body>
