--- a/Alan/src/main/webapp/WEB-INF/jsp/cadastroProduto.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/cadastroProduto.jspx
@@ -28,7 +28,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="prodId">ID</label>
-                                    <input type="text" class="form-control" id="prodId" name="ProdId"/>
+                                    <input type="text" class="form-control" id="prodId" name="prodId" disabled=""/>
                                 </div>
                             </div>
                         </div>
@@ -36,22 +36,23 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="nomeProd">Nome</label>
-                                    <input type="text" class="form-control" id="nomeProd" name="NomeProd" placeholder="Nome"/>
+                                    <input type="text" class="form-control" id="nomeProd" name="nomeProd" placeholder="Nome"/>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="valorProd">Valor</label>
-                                    <input type="text" class="form-control" id="valorProd" name="ValorProd" placeholder="Valor"/>
+                                    <input type="text" class="form-control" id="valorProd" name="valorProd" placeholder="Valor"/>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="filialId">Filial</label>
-                                    <select class="form-control" id="filialId" name="FilialId">
+                                    <select class="form-control" id="filialId" name="filialId">
                                         <option valuue="0">Selecione...</option>
-                                        <option valuue="1">Filial1</option>
-                                        <option valuue="0">Filial2</option>
+                                        <c:forEach items="${filiais}" var="filial">
+                                        <option value="${filial.codigoFilial}">${filial.nomeFantasia}</option>
+                                    </c:forEach>
                                     </select>
                                 </div>
                             </div>
@@ -59,9 +60,9 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label  class="block">Status</label>
-                                    <input type="radio" id="ativo" name="Status" value="true"/><label class="espacamento" for="ativo">Ativo</label>
-                                    <input type="radio" id="inativo" name="Status" value="false"/><label for="inativo">Inativo</label>
+                                    <label  class="block" for="status">Status</label>
+                                    <input type="radio" id="ativo" name="status" value="true"/><label class="espacamento" for="ativo">Ativo</label>
+                                    <input type="radio" id="inativo" name="status" value="false"/><label for="inativo">Inativo</label>
                                 </div>
                             </div>
                         </div>
@@ -78,6 +79,10 @@
 
             <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
             <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
+            <script type="text/javascript" src="resources/js/jquery.maskedinput.js"><![CDATA[/*Teste*/]]></script>
+            <script type="text/javascript">
+                $("#valorProd").maskMoney();
+            </script>
         </body>
     </html>
 
