--- a/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
@@ -27,12 +27,12 @@
             <div class="container">
                 <h2>Cadastro de Usuários </h2>
                 <div class="box">
-                    <form>
+                    <form method="post">
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="UsuarioId">ID</label>
-                                    <input type="text" class="form-control" id="usuarioId" name="UsuarioId" value="4562"/>
+                                    <input type="text" class="form-control" id="usuarioId" name="UsuarioId" disabled=""/>
                                 </div> 
                             </div>
                         </div>
@@ -48,8 +48,9 @@
                                     <label for="PerfilId">Perfil</label>
                                     <select class="form-control" name="PerfilId">
                                         <option value="0">Selecione...</option>
-                                        <option value="1">Gerente</option>
-                                        <option value="2">Vendedor</option>
+                                    <c:forEach items="${perfis}" var="perfil">
+                                        <option value="${peril.codigoPefil}">${perfil.nome}</option>
+                                    </c:forEach>
                                     </select>
                                 </div>
                             </div>
@@ -58,8 +59,9 @@
                                     <label for="filialId">Filial</label>
                                     <select class="form-control" id="filialId" name="FilialId">
                                         <option value="0">Selecione...</option>
-                                        <option value="1">Filial RJ</option>
-                                        <option value="2">Filial SP</option>
+                                    <c:forEach items="${filiais}" var="filial">
+                                        <option value="${filial.codigoFilial}">${filial.nomeFantasia}</option>
+                                    </c:forEach>
                                     </select>
                                 </div>
                             </div>
@@ -79,7 +81,14 @@
                                 </div> 
                             </div>
                         </div>
-
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label for="Senha">Senha</label>
+                                    <input type="password" class="form-control" id="senha" name="Senha" placeholder="Senha"/>
+                                </div>
+                            </div>
+                        </div>
                         <div class="right">
                             <button type="submit" class="btn btn-success">Salvar</button>
                             <button type="button" class="btn btn-danger">Descartar</button>
