--- a/Alan/src/main/webapp/WEB-INF/jsp/movimentacaoSaida.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/movimentacaoSaida.jspx
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- 
-    Document   : jsp
-    Created on : 30/04/2016, 00:15:38
+    Document   : movimentacaoSaida
+    Created on : 08/05/2016, 12:03:40
     Author     : Nicolas
 -->
 <jsp:root xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:c="http://java.sun.com/jsp/jstl/core"
           version="2.0">
+
     <jsp:directive.page contentType="text/html" pageEncoding="UTF-8"/>
     <html>
         <head>
-            <title>Cadastro Filial</title>
-          
+            <title>Movimentação Saída</title>
+            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
             <link rel="stylesheet" href="resources/css/bootstrap.min.css"/>
             <link rel="stylesheet" href="resources/css/style.css"/>
         </head>
         <body>
             <jsp:include page="menu.jspx"></jsp:include>
             <div class="container">
-                <h2>Cadastro de Filiais</h2>
+                <h2>Movimentação Saída</h2>
                 <div class="box">
                     <form method="post">
                         <div class="row">   
@@ -44,8 +45,8 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label for="cnpj">CNPJ</label>
-                                    <input type="text" required="" class="form-control" id="cnpj" name="cnpj" placeholder="CNPJ"/>
+                                    <label for="cnpj">Cnpj</label>
+                                    <input type="text" required="" class="form-control" id="cnpj" name="cnpj" placeholder="Cnpj"/>
                                 </div>
                             </div>
                         </div>
@@ -71,7 +72,7 @@
                             <div class="col-md-1">
                                 <div class="form-group">
                                     <label for="Estado">Estado</label>
-                                    <input type="text" required="" class="form-control" id="estado" name="Estado" placeholder="Estado" maxlength="2"/>
+                                    <input type="text" required="" class="form-control" id="estado" name="Estado" placeholder="Estado"/>
                                 </div>
                             </div>
                             <div class="col-md-3">
@@ -92,9 +93,10 @@
                     </form>
                 </div>
             </div>
-            <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
-            <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
+            <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"></script>
+            <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
         </body>
     </html>
+
 
 </jsp:root>
