--- a/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
@@ -19,13 +19,13 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/Alan">Home</a></li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cadastro
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cadastrar
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="CadastroFilial">Filial</a></li>
-                            <li><a href="CadastroUsuario">Usuário</a></li>
                             <li><a href="CadastroProduto">Produto</a></li>
+                            <li><a href="CadastroUsuario">Usuário</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
