--- a/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
@@ -14,10 +14,9 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/Alan">Alan</a>
+                    <a class="navbar-brand" href="/Alan/Home">Alan</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/Alan">Home</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cadastrar
                             <span class="caret"></span>
@@ -48,6 +47,7 @@
                         </ul>
                     </li>
                     <li><a href="#">Relatorios</a></li>
+                    <li><a href="Logout"></a></li>
                 </ul>
             </div>
         </nav>
