pequenas alterações para rodar o projeto

--- a/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                     <li><a href="#">Relatorios</a></li>
-                    <li><a href="Logout"></a></li>
+                    <li><a href="Logout">Logout</a></li>
                 </ul>
             </div>
         </nav>
