--- a/Alan/src/main/webapp/WEB-INF/jsp/buscaUsuarios.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/buscaUsuarios.jspx
@@ -23,7 +23,7 @@
             <jsp:include page="menu.jspx"></jsp:include>
             <div class="container">
                 <h2>Consulta de Usuários </h2>                
-                <table id="usuarios" class="table table-striped table-bordered table-hover">
+                <table id="usuarios" class="table table-striped table-bordered">
                     <thead>
                         <tr>
                             <th>Id</th>
@@ -36,7 +36,7 @@
                     <tbody>
                         <c:forEach var="usuario" items="${Usuarios}">
                             <tr>
-                                <td>${usuario.codigoUnitario}</td>
+                                <td class="id">${usuario.codigoUnitario}</td>
                                 <td>${usuario.nome}</td>
                                 <td>${usuario.login}</td>
                                 <td>${usuario.login}</td>
@@ -45,6 +45,11 @@
                         </c:forEach>
                     </tbody>                    
                 </table>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="button" id="btnEditar" class="btn btn-success" disabled="disabled">Editar</button>
+                    </div>
+                </div>
 <!--                <div class="box">
                     <form>
                         <div class="row">
@@ -131,6 +136,19 @@
                         "language":{
                             "url": "//cdn.datatables.net/plug-ins/1.10.11/i18n/Portuguese-Brasil.json"
                         }
+                    });
+                    
+                    $(document).on("click", "tbody tr", function () {
+                        $("tr").removeAttr("class", "success");
+                        $(this).attr("class", "success"); 
+                        
+                        $("button[id='btnEditar']").removeAttr("disabled", "disabled");
+                    });
+                    
+                    $(document).on("click", "button[id='btnEditar']", function () {
+                        var id = $("tr[class='success']").children()[0].innerHTML;
+                        var url = window.location.origin + "/Alan/CadastroUsuario?id=" + id;
+                        window.location.href = url;
                     });
                 });
             </script>
