--- a/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
@@ -42,18 +42,19 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="nome">Nome</label>
-                                    <input type="text" class="form-control" id="nome" name="Nome" placeholder="Nome" value="${usuario.nome}"/>
+                                    <input type="text" class="form-control" id="nome" name="Nome" placeholder="Nome" value="${usuario.nome}" required="required"/>
                                 </div>                        
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="PerfilId">Perfil</label>
-                                    <select class="form-control" name="perfilId" id="perfilId">
+                                    <select class="form-control" name="perfilId" id="perfilId" required="required">
                                         <option value="0">Selecione...</option>
                                         <c:forEach items="${perfis}" var="perfil">
                                             <option value="${perfil.codigoPerfil}">${perfil.nome}</option>
                                         </c:forEach>
                                     </select>
+                                    <input type="hidden" id="hiddenPerfilId" value="${usuario.codigoPerfil}" />
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -65,6 +66,7 @@
                                             <option value="${filial.codigoFilial}">${filial.nomeFantasia}</option>
                                         </c:forEach>                                    
                                     </select>
+                                    <input type="hidden" id="hiddenFilialId" value="${usuario.codigoFilial}" />
                                 </div>
                             </div>
                         </div>
@@ -72,7 +74,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="Login">Login</label>
-                                    <input type="text" class="form-control" id="login" name="Login" placeholder="Login" value="${usuario.login}"/>
+                                    <input type="text" class="form-control" id="login" name="Login" placeholder="Login" value="${usuario.login}" required="required"/>
                                 </div> 
                             </div>
                             <div class="col-md-4">
@@ -80,6 +82,7 @@
                                     <label class="block">Status</label>
                                     <input type="radio" id="ativo" name="Status" value="true" /><label for="ativo" class="espacamento">Ativo</label>
                                     <input type="radio" id="inativo" name="Status" value="false" /><label for="inativo">Inativo</label>
+                                    <input type="hidden" id="statusEdit" value="${usuario.status}"/>
                                 </div> 
                             </div>
                         </div>
@@ -88,7 +91,7 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="Senha">Senha</label>
-                                        <input type="password" class="form-control" id="senha" name="Senha" placeholder="Senha"/>
+                                        <input type="password" class="form-control" id="senha" name="Senha" placeholder="Senha" required="required"/>
                                     </div>
                                 </div>
                             </div>
